--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>New Earth</title>
+    <meta name="description" content="Project for ELA 8">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Ethan Belcher">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+  </head>
+</html>
