--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Ethan Belcher">
     
+    <link href="style.css" rel="stylesheet">
+    <script srcf="app.js"></script>
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
   </head>
