--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   
     <div id="tb">
     
-      <h1>Hello world!</h1>
-      <p>bigboisuckbig buttz</p>
-    
+      <br><br><h1>Hello world!</h1>
+      <p>bigboisuckbig buttz</p><br>
     </div>
   
   </body>
